adding support for snli and cola

--- a/code/run_inoculation.ipynb
+++ b/code/run_inoculation.ipynb
@@ -25,7 +25,7 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.naive_bayes import MultinomialNB\n",
     "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.metrics import classification_report\n",
+    "from sklearn.metrics import matthews_corrcoef\n",
     "\n",
     "import logging\n",
     "logger = logging.getLogger(__name__)\n",
@@ -93,8 +93,9 @@
     "        training_args.save_total_limit = args.save_total_limit\n",
     "    import datetime\n",
     "    date_time = \"{}-{}\".format(datetime.datetime.now().month, datetime.datetime.now().day)\n",
-    "    run_name = \"{0}_{1}_{2}_mlen_{3}_lr_{4}_seed_{5}_metrics_{6}\".format(\n",
+    "    run_name = \"{0}_{1}_{2}_{3}_mlen_{4}_lr_{5}_seed_{6}_metrics_{7}\".format(\n",
     "        args.run_name,\n",
+    "        args.task_name,\n",
     "        args.model_type,\n",
     "        date_time,\n",
     "        args.max_seq_length,\n",
@@ -196,8 +197,11 @@
     "            preds = np.argmax(preds, axis=1)\n",
     "            result_to_print = classification_report(p.label_ids, preds, digits=5, output_dict=True)\n",
     "            print(classification_report(p.label_ids, preds, digits=5))\n",
+    "            mcc_scores = matthews_corrcoef(p.label_ids, preds)\n",
+    "            logger.info(f\"MCC scores: {mcc_scores}.\")\n",
     "            result_to_return = metric.compute(predictions=preds, references=p.label_ids)\n",
     "            result_to_return[\"Macro-F1\"] = result_to_print[\"macro avg\"][\"f1-score\"]\n",
+    "            result_to_return[\"MCC\"] = mcc_scores\n",
     "            return result_to_return\n",
     "\n",
     "        # Initialize our Trainer. We are only intersted in evaluations\n",
@@ -251,8 +255,11 @@
     "    parser = argparse.ArgumentParser()\n",
     "\n",
     "    ## Required parameters\n",
+    "    parser.add_argument(\"--wandb_proj_name\",\n",
+    "                        default=\"\",\n",
+    "                        type=str)\n",
     "    parser.add_argument(\"--task_name\",\n",
-    "                        default=\"inoculation\",\n",
+    "                        default=\"sst3\",\n",
     "                        type=str)\n",
     "    parser.add_argument(\"--run_name\",\n",
     "                        default=\"inoculation-run\",\n",
@@ -360,6 +367,10 @@
     "                        default=8,\n",
     "                        type=int,\n",
     "                        help=\"\")\n",
+    "    parser.add_argument(\"--eval_sample_limit\",\n",
+    "                        default=-1,\n",
+    "                        type=int,\n",
+    "                        help=\"\")\n",
     "    parser.add_argument(\"--num_train_epochs\",\n",
     "                        default=3.0,\n",
     "                        type=float,\n",
@@ -383,19 +394,23 @@
     "        args = parser.parse_args()\n",
     "    # os.environ[\"WANDB_DISABLED\"] = \"NO\" if args.is_tensorboard else \"YES\" # BUG\n",
     "    os.environ[\"TRANSFORMERS_CACHE\"] = \"../huggingface_inoculation_cache/\"\n",
+    "    os.environ[\"WANDB_PROJECT\"] = f\"{args.task_name}_bert_corrupt\"\n",
     "    # if cache does not exist, create one\n",
     "    if not os.path.exists(os.environ[\"TRANSFORMERS_CACHE\"]): \n",
     "        os.makedirs(os.environ[\"TRANSFORMERS_CACHE\"])\n",
     "    TASK_CONFIG = {\n",
-    "        \"inoculation\": (\"text\", None)\n",
+    "        \"sst3\": (\"text\", None),\n",
+    "        \"cola\": (\"sentence\", None),\n",
+    "        \"mnli\": (\"premise\", \"hypothesis\"),\n",
+    "        \"snli\": (\"premise\", \"hypothesis\"),\n",
     "    }\n",
     "    # Load pretrained model and tokenizer\n",
-    "    NUM_LABELS = 3\n",
+    "    NUM_LABELS = 2 if args.task_name == \"cola\" else 3\n",
     "    MAX_SEQ_LEN = 128\n",
     "    training_args = generate_training_args(args, inoculation_step=0)\n",
     "    config = AutoConfig.from_pretrained(\n",
     "        args.model_type,\n",
-    "        num_labels=3,\n",
+    "        num_labels=NUM_LABELS,\n",
     "        finetuning_task=args.task_name,\n",
     "        cache_dir=args.cache_dir\n",
     "    )\n",
@@ -430,20 +445,31 @@
     "    train_pipeline = HuggingFaceRoBERTaBase(tokenizer, \n",
     "                                            model, args.task_name, \n",
     "                                            TASK_CONFIG[args.task_name])\n",
+    "    logger.info(f\"***** TASK NAME: {args.task_name} *****\")\n",
     "    # we use panda loader now, to make sure it is backward compatible\n",
     "    # with our file writer.\n",
     "    pd_format = True\n",
     "    if args.inoculation_data_path.split(\".\")[-1] != \"tsv\":\n",
-    "        logger.info(f\"***** Loading pre-loaded datasets from the disk directly! *****\")\n",
-    "        pd_format = False\n",
-    "        datasets = DatasetDict.load_from_disk(args.inoculation_data_path)\n",
-    "        inoculation_step_sample_size = int(len(datasets[\"train\"]) * args.inoculation_step_sample_size)\n",
-    "        logger.info(f\"***** Inoculation Sample Count: %s *****\"%(inoculation_step_sample_size))\n",
-    "        # this may not always start for zero inoculation\n",
-    "        training_args = generate_training_args(args, inoculation_step=inoculation_step_sample_size)\n",
-    "        datasets[\"train\"] = datasets[\"train\"].shuffle(seed=args.seed)\n",
-    "        inoculation_train_df = datasets[\"train\"].select(range(inoculation_step_sample_size))\n",
-    "        eval_df = datasets[\"validation\"]\n",
+    "        if len(args.inoculation_data_path.split(\".\")) > 1:\n",
+    "            logger.info(f\"***** Loading pre-loaded datasets from the disk directly! *****\")\n",
+    "            pd_format = False\n",
+    "            datasets = DatasetDict.load_from_disk(args.inoculation_data_path)\n",
+    "            inoculation_step_sample_size = int(len(datasets[\"train\"]) * args.inoculation_step_sample_size)\n",
+    "            logger.info(f\"***** Inoculation Sample Count: %s *****\"%(inoculation_step_sample_size))\n",
+    "            # this may not always start for zero inoculation\n",
+    "            training_args = generate_training_args(args, inoculation_step=inoculation_step_sample_size)\n",
+    "            datasets[\"train\"] = datasets[\"train\"].shuffle(seed=args.seed)\n",
+    "            inoculation_train_df = datasets[\"train\"].select(range(inoculation_step_sample_size))\n",
+    "            eval_df = datasets[\"validation\"]\n",
+    "            datasets[\"validation\"] = datasets[\"validation\"].shuffle(seed=args.seed)\n",
+    "            if args.eval_sample_limit != -1:\n",
+    "                datasets[\"validation\"] = datasets[\"validation\"].select(range(args.eval_sample_limit))\n",
+    "        else:\n",
+    "            logger.info(f\"***** Loading downloaded huggingface datasets: {args.inoculation_data_path}! *****\")\n",
+    "            pd_format = False\n",
+    "            if args.inoculation_data_path in [\"sst3\", \"cola\", \"mnli\", \"snli\"]:\n",
+    "                pass\n",
+    "            raise NotImplementedError()\n",
     "    else:\n",
     "        train_df = pd.read_csv(args.inoculation_data_path, delimiter=\"\\t\")\n",
     "        eval_df = pd.read_csv(args.eval_data_path, delimiter=\"\\t\")\n",
