--- a/code/vocab_mismatch.ipynb
+++ b/code/vocab_mismatch.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,13 +17,14 @@
     "from data_formatter_utils import *\n",
     "from datasets import DatasetDict\n",
     "from datasets import Dataset\n",
+    "from datasets import load_dataset\n",
     "import transformers\n",
     "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,14 +242,564 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Corrupted DynaSentv1.1 Round 1"
+    "#### Corrupted MNLI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mnli_map = {'entailment': 0, 'neutral' : 1, 'contradiction' : 2}\n",
+    "def process_mnli(dataset, split):\n",
+    "    data_all = []\n",
+    "    for example in dataset[split]:\n",
+    "        premise = example['premise']\n",
+    "        hypothesis = example['hypothesis']\n",
+    "        label = example['label']\n",
+    "        if label in [0,1,2]:\n",
+    "            data = {\"premise\" : premise, \n",
+    "                    \"hypothesis\" : hypothesis, \n",
+    "                    \"label\" : label}\n",
+    "        data_all.append(data)\n",
+    "    return data_all\n",
+    "\n",
+    "def mnli_write_tsv(*datasets, output_filename):\n",
+    "    all_data = []\n",
+    "    for dataset in datasets:\n",
+    "        all_data += dataset\n",
+    "    random.shuffle(all_data)\n",
+    "    with open(output_filename, \"wt\") as f:\n",
+    "        writer = csv.DictWriter(f, delimiter=\"\\t\", fieldnames=['premise', 'hypothesis', 'label'])\n",
+    "        writer.writeheader()\n",
+    "        writer.writerows(all_data)\n",
+    "        \n",
+    "def mnli_random_corrupt(example):\n",
+    "    original_premise = example['premise']\n",
+    "    original_hypothesis = example['hypothesis']\n",
+    "    if original_hypothesis == None:\n",
+    "        original_hypothesis = \"\"\n",
+    "    try:\n",
+    "        original_premise_tokens = original_tokenizer.tokenize(original_premise)\n",
+    "        original_hypothesis_tokens = original_tokenizer.tokenize(original_hypothesis)\n",
+    "    except:\n",
+    "        print(\"Please debug these sequence...\")\n",
+    "        print(original_premise)\n",
+    "        print(original_hypothesis)\n",
+    "    corrupted_premise_tokens = []\n",
+    "    corrupted_hypothesis_tokens = []\n",
+    "    for ori_t in original_premise_tokens:\n",
+    "        if ori_t in token_mapping.keys():\n",
+    "            cor_t = token_mapping[ori_t]\n",
+    "        else:\n",
+    "            cor_t = ori_t\n",
+    "        corrupted_premise_tokens.append(cor_t)\n",
+    "    for ori_t in original_hypothesis_tokens:\n",
+    "        if ori_t in token_mapping.keys():\n",
+    "            cor_t = token_mapping[ori_t]\n",
+    "        else:\n",
+    "            cor_t = ori_t\n",
+    "        corrupted_hypothesis_tokens.append(cor_t)\n",
+    "\n",
+    "    example['premise'] = original_tokenizer.convert_tokens_to_string(corrupted_premise_tokens)\n",
+    "    example['hypothesis'] = original_tokenizer.convert_tokens_to_string(corrupted_hypothesis_tokens)\n",
+    "    return example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Reusing dataset glue (/afs/cs.stanford.edu/u/wuzhengx/.cache/huggingface/datasets/glue/mnli/1.0.0/7c99657241149a24692c402a5c3f34d4c9f1df5ac2e4c3759fadea38f6cb29c4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataset = load_dataset('glue', 'mnli')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mnli_train = process_mnli(dataset, \"train\")\n",
+    "mnli_validation_matched = process_mnli(dataset, \"validation_matched\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mnli_write_tsv(mnli_train, output_filename=os.path.join(external_output_dirname, \"mnli\", \"mnli-train.tsv\"))\n",
+    "mnli_write_tsv(mnli_validation_matched, output_filename=os.path.join(external_output_dirname, \"mnli\", \"mnli-dev.tsv\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "dd26c0f020394494a58c44db088f1a72",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, max=392702.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "97841817f553438485a73d768878c50a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, max=9815.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# let us corrupt SST3 in the same way as before\n",
+    "train_df = pd.read_csv(os.path.join(external_output_dirname, \"mnli\", \"mnli-train.tsv\"), delimiter=\"\\t\")\n",
+    "eval_df = pd.read_csv(os.path.join(external_output_dirname, \"mnli\", \"mnli-dev.tsv\"), delimiter=\"\\t\")\n",
+    "\n",
+    "train_df = Dataset.from_pandas(train_df)\n",
+    "eval_df = Dataset.from_pandas(eval_df)\n",
+    "\n",
+    "corrupted_train_dataset = train_df.map(mnli_random_corrupt)\n",
+    "corrupted_validation_dataset = eval_df.map(mnli_random_corrupt)\n",
+    "\n",
+    "corrupted_datasets = DatasetDict({\"train\":corrupted_train_dataset, \n",
+    "                                  \"validation\":corrupted_validation_dataset})\n",
+    "corrupted_datasets.save_to_disk(\"../data-files/mnli-corrupted\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'hypothesis': 'a manga adf finish fry 99wartax 875 nazi 53 crops \"',\n",
+       " 'label': 0,\n",
+       " 'premise': 'a $ c gee defines vu 99 bopax mlsax 875 nazi 53 crops 99df reaching lila 1724 bkwart 341 pitt'}"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "corrupted_validation_dataset[1]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Corrupted DynaSentv1.1 Round 2"
+    "#### Corrupted CoLA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def process_cola(dataset, split):\n",
+    "    data_all = []\n",
+    "    for example in dataset[split]:\n",
+    "        sentence = example['sentence']\n",
+    "        label = example['label']\n",
+    "        data = {\"sentence\" : sentence,\n",
+    "                \"label\" : label}\n",
+    "        data_all.append(data)\n",
+    "    return data_all\n",
+    "\n",
+    "def cola_write_tsv(*datasets, output_filename):\n",
+    "    all_data = []\n",
+    "    for dataset in datasets:\n",
+    "        all_data += dataset\n",
+    "    random.shuffle(all_data)\n",
+    "    with open(output_filename, \"wt\") as f:\n",
+    "        writer = csv.DictWriter(f, delimiter=\"\\t\", fieldnames=['sentence', 'label'])\n",
+    "        writer.writeheader()\n",
+    "        writer.writerows(all_data)\n",
+    "        \n",
+    "def cola_random_corrupt(example):\n",
+    "    original_sentence = example['sentence']\n",
+    "    original_tokens = original_tokenizer.tokenize(original_sentence)\n",
+    "    corrupted_tokens = []\n",
+    "    for ori_t in original_tokens:\n",
+    "        if ori_t in token_mapping.keys():\n",
+    "            cor_t = token_mapping[ori_t]\n",
+    "        else:\n",
+    "            cor_t = ori_t\n",
+    "        corrupted_tokens.append(cor_t)\n",
+    "    example['sentence'] = original_tokenizer.convert_tokens_to_string(corrupted_tokens)\n",
+    "    return example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Reusing dataset glue (/afs/cs.stanford.edu/u/wuzhengx/.cache/huggingface/datasets/glue/cola/1.0.0/7c99657241149a24692c402a5c3f34d4c9f1df5ac2e4c3759fadea38f6cb29c4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataset = load_dataset('glue', 'cola')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cola_train = process_cola(dataset, \"train\")\n",
+    "cola_validation = process_cola(dataset, \"validation\")\n",
+    "cola_test = process_cola(dataset, \"test\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cola_write_tsv(cola_train, output_filename=os.path.join(external_output_dirname, \"cola\", \"cola-train.tsv\"))\n",
+    "cola_write_tsv(cola_validation, output_filename=os.path.join(external_output_dirname, \"cola\", \"cola-dev.tsv\"))\n",
+    "cola_write_tsv(cola_test, output_filename=os.path.join(external_output_dirname, \"cola\", \"cola-test.tsv\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "908ae6e38e2a49658799418aaf293524",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, max=8551.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ee2e5509c9f94e6a91a5fc0fadf2ba3a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, max=1043.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "251540f2f11e47e2b5623cf61bc89cbb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, max=1063.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# let us corrupt SST3 in the same way as before\n",
+    "train_df = pd.read_csv(os.path.join(external_output_dirname, \"cola\", \"cola-train.tsv\"), delimiter=\"\\t\")\n",
+    "eval_df = pd.read_csv(os.path.join(external_output_dirname, \"cola\", \"cola-dev.tsv\"), delimiter=\"\\t\")\n",
+    "test_df = pd.read_csv(os.path.join(external_output_dirname, \"cola\", \"cola-test.tsv\"), delimiter=\"\\t\")\n",
+    "\n",
+    "train_df = Dataset.from_pandas(train_df)\n",
+    "eval_df = Dataset.from_pandas(eval_df)\n",
+    "test_df = Dataset.from_pandas(test_df)\n",
+    "\n",
+    "corrupted_train_dataset = train_df.map(cola_random_corrupt)\n",
+    "corrupted_validation_dataset = eval_df.map(cola_random_corrupt)\n",
+    "corrupted_test_dataset = test_df.map(cola_random_corrupt)\n",
+    "\n",
+    "corrupted_datasets = DatasetDict({\"train\":corrupted_train_dataset, \n",
+    "                                  \"validation\":corrupted_validation_dataset, \n",
+    "                                  \"test\":corrupted_test_dataset})\n",
+    "corrupted_datasets.save_to_disk(\"../data-files/cola-corrupted\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Corrupted SNLI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mnli_map = {'entailment': 0, 'neutral' : 1, 'contradiction' : 2}\n",
+    "def process_snli(dataset, split):\n",
+    "    data_all = []\n",
+    "    for example in dataset[split]:\n",
+    "        premise = example['premise']\n",
+    "        hypothesis = example['hypothesis']\n",
+    "        label = example['label']\n",
+    "        if label in [0,1,2]:\n",
+    "            data = {\"premise\" : premise, \n",
+    "                    \"hypothesis\" : hypothesis, \n",
+    "                    \"label\" : label}\n",
+    "        data_all.append(data)\n",
+    "    return data_all\n",
+    "\n",
+    "def snli_write_tsv(*datasets, output_filename):\n",
+    "    all_data = []\n",
+    "    for dataset in datasets:\n",
+    "        all_data += dataset\n",
+    "    random.shuffle(all_data)\n",
+    "    with open(output_filename, \"wt\") as f:\n",
+    "        writer = csv.DictWriter(f, delimiter=\"\\t\", fieldnames=['premise', 'hypothesis', 'label'])\n",
+    "        writer.writeheader()\n",
+    "        writer.writerows(all_data)\n",
+    "        \n",
+    "def snli_random_corrupt(example):\n",
+    "    original_premise = example['premise']\n",
+    "    original_hypothesis = example['hypothesis']\n",
+    "    if original_hypothesis == None:\n",
+    "        original_hypothesis = \"\"\n",
+    "    try:\n",
+    "        original_premise_tokens = original_tokenizer.tokenize(original_premise)\n",
+    "        original_hypothesis_tokens = original_tokenizer.tokenize(original_hypothesis)\n",
+    "    except:\n",
+    "        print(\"Please debug these sequence...\")\n",
+    "        print(original_premise)\n",
+    "        print(original_hypothesis)\n",
+    "    corrupted_premise_tokens = []\n",
+    "    corrupted_hypothesis_tokens = []\n",
+    "    for ori_t in original_premise_tokens:\n",
+    "        if ori_t in token_mapping.keys():\n",
+    "            cor_t = token_mapping[ori_t]\n",
+    "        else:\n",
+    "            cor_t = ori_t\n",
+    "        corrupted_premise_tokens.append(cor_t)\n",
+    "    for ori_t in original_hypothesis_tokens:\n",
+    "        if ori_t in token_mapping.keys():\n",
+    "            cor_t = token_mapping[ori_t]\n",
+    "        else:\n",
+    "            cor_t = ori_t\n",
+    "        corrupted_hypothesis_tokens.append(cor_t)\n",
+    "\n",
+    "    example['premise'] = original_tokenizer.convert_tokens_to_string(corrupted_premise_tokens)\n",
+    "    example['hypothesis'] = original_tokenizer.convert_tokens_to_string(corrupted_hypothesis_tokens)\n",
+    "    return example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Reusing dataset snli (/afs/cs.stanford.edu/u/wuzhengx/.cache/huggingface/datasets/snli/plain_text/1.0.0/bb1102591c6230bd78813e229d5dd4c7fbf4fc478cec28f298761eb69e5b537c)\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataset = load_dataset('snli')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "snli_train = process_snli(dataset, \"train\")\n",
+    "snli_validation = process_snli(dataset, \"validation\")\n",
+    "snli_test = process_snli(dataset, \"test\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "snli_write_tsv(snli_train, output_filename=os.path.join(external_output_dirname, \"snli\", \"snli-train.tsv\"))\n",
+    "snli_write_tsv(snli_validation, output_filename=os.path.join(external_output_dirname, \"snli\", \"snli-dev.tsv\"))\n",
+    "snli_write_tsv(snli_test, output_filename=os.path.join(external_output_dirname, \"snli\", \"snli-test.tsv\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "cc57b4ccf5b64d06b60d321faa96a521",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, max=550152.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "898c5e6918a1405fbfec55f8865ce35b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, max=10000.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6d7741128d4a4544bf8058d0b67c2bd8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, max=10000.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# let us corrupt SST3 in the same way as before\n",
+    "train_df = pd.read_csv(os.path.join(external_output_dirname, \"snli\", \"snli-train.tsv\"), delimiter=\"\\t\")\n",
+    "eval_df = pd.read_csv(os.path.join(external_output_dirname, \"snli\", \"snli-dev.tsv\"), delimiter=\"\\t\")\n",
+    "test_df = pd.read_csv(os.path.join(external_output_dirname, \"snli\", \"snli-test.tsv\"), delimiter=\"\\t\")\n",
+    "\n",
+    "train_df = Dataset.from_pandas(train_df)\n",
+    "eval_df = Dataset.from_pandas(eval_df)\n",
+    "test_df = Dataset.from_pandas(test_df)\n",
+    "\n",
+    "corrupted_train_dataset = train_df.map(snli_random_corrupt)\n",
+    "corrupted_validation_dataset = eval_df.map(snli_random_corrupt)\n",
+    "corrupted_test_dataset = test_df.map(snli_random_corrupt)\n",
+    "\n",
+    "corrupted_datasets = DatasetDict({\"train\":corrupted_train_dataset, \n",
+    "                                  \"validation\":corrupted_validation_dataset,\n",
+    "                                  \"test\":corrupted_test_dataset})\n",
+    "corrupted_datasets.save_to_disk(\"../data-files/snli-corrupted\")"
    ]
   }
  ],
